--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,6 +64,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-compose:2.5.2'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
+    implementation "com.google.accompanist:accompanist-pager:0.26.5-rc"
+    implementation "com.google.accompanist:accompanist-pager-indicators:0.26.5-rc"
+
+
+
 
     def room_version = "2.4.3"
 
