--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,8 +69,7 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
     implementation "com.google.accompanist:accompanist-pager:0.26.5-rc"
     implementation "com.google.accompanist:accompanist-pager-indicators:0.26.5-rc"
-
-
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.5-rc"
 
 
     def room_version = "2.4.3"
