--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,12 +50,12 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.activity:activity-compose:1.6.0'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.1.1'
+    implementation 'androidx.compose.material:material:1.2.1'
     implementation platform('com.google.firebase:firebase-bom:31.0.0')
     implementation 'com.google.firebase:firebase-database-ktx'
     testImplementation 'junit:junit:4.13.2'
@@ -71,7 +71,10 @@ dependencies {
     implementation "com.google.accompanist:accompanist-pager-indicators:0.26.5-rc"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.5-rc"
     implementation 'androidx.compose.runtime:runtime-livedata:1.3.0-rc01'
+    implementation("io.coil-kt:coil:2.2.2")
     implementation("io.coil-kt:coil-compose:2.2.2")
+    implementation("io.coil-kt:coil-gif:2.2.2")
+
 
     def room_version = "2.4.3"
     implementation "androidx.room:room-runtime:$room_version"
