--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -52,28 +52,29 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation 'androidx.activity:activity-compose:1.6.0'
+    implementation 'androidx.activity:activity-compose:1.6.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.2.1'
-    implementation platform('com.google.firebase:firebase-bom:31.0.0')
+    implementation 'androidx.compose.material:material:1.3.1'
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-database-ktx'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-    implementation 'androidx.navigation:navigation-compose:2.5.2'
+    implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
-    implementation "com.google.accompanist:accompanist-pager:0.26.5-rc"
-    implementation "com.google.accompanist:accompanist-pager-indicators:0.26.5-rc"
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.26.5-rc"
-    implementation 'androidx.compose.runtime:runtime-livedata:1.3.0-rc01'
+    implementation 'com.google.accompanist:accompanist-pager:0.28.0'
+    implementation 'com.google.accompanist:accompanist-pager-indicators:0.28.0'
+    implementation 'com.google.accompanist:accompanist-systemuicontroller:0.28.0'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.4.0-alpha02'
     implementation("io.coil-kt:coil:2.2.2")
     implementation("io.coil-kt:coil-compose:2.2.2")
     implementation("io.coil-kt:coil-gif:2.2.2")
+    implementation "com.google.accompanist:accompanist-navigation-animation:0.28.0"
 
 
     def room_version = "2.4.3"
